<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <com.rfm.sdk.RFMAdView
        android:id="@+id/bannerviewoffscreen"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center" />

    <RelativeLayout
        android:id="@+id/toplayout"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/getadbuttonoffscreen"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/getAd"
            android:textSize="14sp" />

        <Button
            android:id="@+id/getlocationoffscreen"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/getadbuttonoffscreen"
            android:text="@string/getLocation"
            android:textSize="14sp" />

        <Button
            android:id="@+id/clearconsoleswipe"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/getlocationoffscreen"
            android:text="@string/clearConsole"
            android:textSize="14sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/debugconsoleviewswipe"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"
        android:maxLines="1500"
        android:scrollbars="vertical"
        android:text="@string/defaultConsoleText"
        android:textColor="#000000"
        android:textSize="11sp"
        android:typeface="monospace">

    </TextView>


</LinearLayout>
