<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	 >
    	  <RelativeLayout 
    	        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:padding="5dp"
		    	 >
	    		<TextView
	    		    android:id="@+id/appIdTitle"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:text="@string/appIdTitle"
	                android:layout_alignParentLeft="true"
	                />
	    		<EditText
	    		    android:id="@+id/appIdEntry"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/appIdTitle"
	                android:imeOptions="flagNoExtractUi"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:layout_alignParentLeft="true"
	                android:layout_below = "@id/appIdTitle"
	                android:maxLines="1"
	                />
  		  </RelativeLayout>
	      <RelativeLayout 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:padding="5dp"
	    	>
	    	   <TextView
	    	       android:id="@+id/appIdHistoryTitle"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:text="@string/appIdHistoryTitle"
	                android:layout_alignParentLeft="true"/>
	    	     <Spinner
	    	        android:id="@+id/appIdHistory"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
	    	        android:textAppearance="?android:attr/textAppearanceSmall"
	    	        android:layout_below = "@id/appIdHistoryTitle"
			        android:layout_alignParentLeft="true" />
	    		
	    </RelativeLayout>
    </LinearLayout>
	<LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" 
    	android:paddingTop="10dp"
    	>
          <RelativeLayout 
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:padding="5dp" >
	    		<TextView
	    		    android:id="@+id/testAdIdTitle"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:text="@string/testAdIdTitle"
	                android:layout_alignParentLeft="true"
	                />
	    		<EditText
	    		    android:id="@+id/testAdIdEntry"
	    		    android:layout_width="match_parent"
	    		    android:layout_height="wrap_content"
	                android:hint="@string/testAdIdTitle"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:imeOptions="flagNoExtractUi"
	                android:layout_alignParentLeft="true"
	                android:layout_below = "@id/testAdIdTitle"
	                android:maxLines="1"
	                />
  		  </RelativeLayout>
	      <RelativeLayout 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:padding = "5dp">
	    	   <TextView
	                android:id="@+id/testAdHistoryTitle"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:text="@string/testAdHistoryTitle"
	                android:layout_alignParentLeft="true"/>
	    	     <Spinner
	    	        android:id="@+id/testAdIdHistory"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" 
	    	        android:textAppearance="?android:attr/textAppearanceSmall"
			        android:layout_alignParentLeft="true"
			        android:layout_below="@id/testAdHistoryTitle"
			       />
	    		
	    </RelativeLayout>

	</LinearLayout>

</LinearLayout>
